tests/negative/symbols/discard-used.orng
fn main() -> Int {
    let x = 4
    _ = x
    x
}